# gdv-WiSe2022

./: .gitignore  GDV_tutorial_06.py  GDV_tutorial_06_empty.py  GDV_tutorial_06rgb.py  README.md  pyproject.toml
src/: 01-img-manipulation.solution.py  02-pixel-manipulation.solution.py  07-connected-components.problem.py  07-connected-components.solution.py  08-template-matching.solution.py  09-blur-3d.solution.py  09-blur.problem.py  09-blur.solution.py  10-fourier-transform.problem.py  10-fourier-transform.solution.py  11-transformations.problem.py  11-transformations.solution.py  12-affine-transformation.problem.py  12-affine-transformation.solution.py  13-proj-transformation.solution.py  14-edge-detection.solution.py  15-feat-detection.solution.py  16-harris-corner.problem.py  16-harris-corner.solution.py  17-blob-detector.problem.py  17-blob-detector.solution.py  18-sift.problem.py  18-sift.solution.py  19-dnn-detection.problem.py  19-dnn-detection.solution.py  20-knn-classifiction.problem.py  20-knn-classifiction.solution.py  README.md
utils/: matrix_multiplication.py
