[project]
name        = "GDV"
description = "Grafische Datenverarbeitung an der HFU"
readme      = "README.md"
authors     = [
  { name = "Uwe Hahne", email = "uwe.hahne@hs-furtwangen.de" },
  { name = "Techassi", email = "git@techassi.dev" }
]
keywords    = ["opencv", "computer", "vision"]
requires-python = ">=3.9.0"

[tool.black]
line-length = 120
